--- a/charts/tp-cp-flogo-utilities/charts/flogo-utilities/templates/job-flogo-plugins-extraction.yaml
+++ b/charts/tp-cp-flogo-utilities/charts/flogo-utilities/templates/job-flogo-plugins-extraction.yaml
@@ -119,12 +119,16 @@ spec:
         volumeMounts:
           - name: tmp
             mountPath: /tmp
+          - name: kaniko
+            mountPath: /kaniko/.docker
           - name: shared-vol
             mountPath: {{ $.Values.volumes.plugins.mountPath }}
             subPath: {{ $.Values.volumes.plugins.subPath }}
       {{- end }}
       {{- end }}
       volumes:
+      - name: kaniko
+        emptyDir: {}
       - name: tmp
         emptyDir: {}
       - name: shared-vol
