--- a/charts/tp-cp-flogo-utilities/charts/flogo-utilities/templates/job-flogo-vscode-extension-post-extraction.yaml
+++ b/charts/tp-cp-flogo-utilities/charts/flogo-utilities/templates/job-flogo-vscode-extension-post-extraction.yaml
@@ -103,7 +103,7 @@ spec:
           - name: tmp
             mountPath: /tmp
           - name: kaniko
-            mountPath: /kaniko/.docker
+            mountPath: /kaniko/.docker/
           - name: shared-vol
             mountPath: {{ $.Values.toolsMountPath }}
             subPath: {{ $.Values.toolsSubPath }}
