--- a/charts/tp-cp-flogo-utilities/charts/flogo-utilities/templates/job-bt.yaml
+++ b/charts/tp-cp-flogo-utilities/charts/flogo-utilities/templates/job-bt.yaml
@@ -86,6 +86,8 @@ spec:
         volumeMounts:
         - name: tmp
           mountPath: /tmp
+        - name: kaniko
+          mountPath: /kaniko/.docker/
         - name: store-vol
           mountPath: {{ $.Values.volumes.plugins.mountPath }}
           subPath: {{ $.Values.volumes.plugins.subPath }}
@@ -98,6 +100,8 @@ spec:
       {{- end }}
       volumes:
       - name: tmp
+        emptyDir: {}
+      - name: kaniko
         emptyDir: {}
       - name: store-vol
         persistentVolumeClaim:
