--- a/charts/tp-cp-flogo-utilities/charts/flogo-utilities/templates/job-flogo-plugins-extraction.yaml
+++ b/charts/tp-cp-flogo-utilities/charts/flogo-utilities/templates/job-flogo-plugins-extraction.yaml
@@ -120,7 +120,7 @@ spec:
           - name: tmp
             mountPath: /tmp
           - name: kaniko
-            mountPath: /kaniko/.docker
+            mountPath: /kaniko/.docker/
           - name: shared-vol
             mountPath: {{ $.Values.volumes.plugins.mountPath }}
             subPath: {{ $.Values.volumes.plugins.subPath }}
