--- a/charts/tp-cp-core-finops/Chart.yaml
+++ b/charts/tp-cp-core-finops/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.3.0
+appVersion: 1.3.0-HF2
 dependencies:
 - name: monitoring-service
   version: 1.3.*
@@ -13,4 +13,4 @@ dependencies:
   version: 1.3.*
 description: A Helm chart for -- tp-cp-core-finops
 name: tp-cp-core-finops
-version: 1.3.443
+version: 1.3.463
