--- a/charts/tp-cp-infra-recipes/values.yaml
+++ b/charts/tp-cp-infra-recipes/values.yaml
@@ -12,7 +12,7 @@ capabilities:
     # set to true for latest version of recipe
     isLatest: "true"
     # Helm chart version for cp proxy, default is latest
-    version: "1.3.6"
+    version: "1.3.*"
     tag: "146"
     # Timestamp of capability release
     releaseDate: "2024/02/22"
@@ -29,7 +29,7 @@ capabilities:
     releaseNotes: "Enhancements, Bug fixes, etc."
     # helm chart and image version for artifact manager, default helm chart version is latest
     artifactmanager:
-      version: "1.3.4"
+      version: "1.3.*"
       tag: "73"
   o11y:
     default:
@@ -43,13 +43,13 @@ capabilities:
       releaseNotes: "Enhancements, Bug fixes, etc."
       # helm chart and image version for o11y service, default helm chart version is latest
       o11yservice:
-        version: "1.3.32"
+        version: "1.3.*"
       # helm chart and image version for opentelemetry collector, default helm chart version is latest
       opentelemetryCollector:
-        version: "0.101.2"
+        version: "0.101.*"
       # helm chart and image version for jaeger, default helm chart version is latest
       jaeger:
-        version: "0.72.19"
+        version: "0.72.*"
     withResources:
       # if set to true then existing recipe will be overwritten by latest recipe.
       overwriteRecipe: "false"
@@ -61,13 +61,13 @@ capabilities:
       releaseNotes: "Enhancements, Bug fixes, etc."
       # helm chart and image version for o11y service, default helm chart version is latest
       o11yservice:
-        version: "1.3.32"
+        version: "1.3.*"
       # helm chart and image version for opentelemetry collector, default helm chart version is latest
       opentelemetryCollector:
-        version: "0.101.2"
+        version: "0.101.*"
       # helm chart and image version for jaeger, default helm chart version is latest
       jaeger:
-        version: "0.72.19"
+        version: "0.72.*"
 
   monitorAgent:
     # if set to true then existing recipe will be overwritten by latest recipe.
@@ -75,7 +75,7 @@ capabilities:
     # set to true for latest version of recipe
     isLatest: "true"
     # Helm chart version for monitor-agent, default is latest
-    version: "1.3.136"
+    version: "1.3.*"
     tag: "94"
     # Timestamp of capability release
     releaseDate: "2024/07/22"
