--- a/charts/tp-cp-servicemesh-recipes/values.yaml
+++ b/charts/tp-cp-servicemesh-recipes/values.yaml
@@ -9,7 +9,7 @@ capabilities:
     # set to true for latest version of recipe
     isLatest: "true"
     # Helm chart version for cp proxy, default is latest
-    version: "1.3.1"
+    version: "1.3.*"
     tag: "1.21.2"
     # Timestamp of capability release
     releaseDate: "2024/02/22"
