--- a/charts/dp-core-infrastructure/charts/tp-provisioner-agent/templates/ingress.yaml
+++ b/charts/dp-core-infrastructure/charts/tp-provisioner-agent/templates/ingress.yaml
@@ -32,7 +32,7 @@ spec:
             name: {{ include "tp-provisioner-agent.consts.appName" . }}
             port:
               number: 80
-  - host: "*.eu-west.my.tibco.com"
+  - host: "*.cp1-ns.svc.cluster.local"
     http:
       paths:
       - pathType: Prefix
