--- a/charts/dp-core-infrastructure/charts/tp-provisioner-agent/values.yaml
+++ b/charts/dp-core-infrastructure/charts/tp-provisioner-agent/values.yaml
@@ -18,6 +18,9 @@ resources:
 # no of replicas
 replicaCount: "1"
 
+# log level for the provisioner agent
+logLevel: "info"
+
 image:
   name: infra-provisioner-agent
   tag: 356
