--- a/charts/artifactmanager/templates/ingress.yaml
+++ b/charts/artifactmanager/templates/ingress.yaml
@@ -45,7 +45,7 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    - host: "*.prod-tibco-sub-{{ .Values.global.cp.subscriptionId}}.svc.cluster.local"
+    - host: "*.cp1-my.localhost.dataplanes.pro"
       http:
         {{- if $.Values.ingress.hostsOverride -}}
         paths:
@@ -95,7 +95,7 @@ spec:
                 port:
                   number: {{ $.Values.service.port }}
         {{- end }}
-    - host: "*.eu-west.my.tibco.com"
+    - host: "*.cp1-ns.svc.cluster.local"
       http:
         {{- if $.Values.ingress.hostsOverride -}}
         paths:
