--- a/charts/o11y-service/templates/deployment.yaml
+++ b/charts/o11y-service/templates/deployment.yaml
@@ -47,6 +47,9 @@ spec:
           ports:
             - containerPort: 7820
               name: tp-o11yservice
+          readinessProbe:
+            tcpSocket:
+              port: 7820
           env:
             - name: IS_CP
               value: "false"
