--- a/charts/tp-cp-core/charts/identity-provider/values.yaml
+++ b/charts/tp-cp-core/charts/identity-provider/values.yaml
@@ -79,6 +79,14 @@ fluentbit:
     limits:
       cpu: "150m"
       memory: "150Mi"
+init:
+  resources:
+    requests:
+      cpu: "100m"
+      memory: "100Mi"
+    limits:
+      cpu: "150m"
+      memory: "150Mi"
 
 # HPA
 hpa:
