--- a/charts/tp-cp-core/values.yaml
+++ b/charts/tp-cp-core/values.yaml
@@ -89,3 +89,11 @@ global:
       capabilities:
         drop:
           - ALL
+  resources:
+    tpcpcoreJob:
+      requests:
+        cpu: "100m"
+        memory: "100Mi"
+      limits:
+        cpu: "150m"
+        memory: "150Mi"
