--- a/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-prometheus/values.yaml
+++ b/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-prometheus/values.yaml
@@ -50,6 +50,15 @@ prometheus:
       cpu: 300m
       memory: 12Gi
 
+prometheusds:
+  resources:
+    requests:
+      cpu: 200m
+      memory: 128m
+    limits:
+      cpu: 300m
+      memory: 256m
+
 ## Images
 ##
 ## Control what images to use
