--- a/charts/tp-cp-integration-common/charts/fileserver/templates/deployment.yaml
+++ b/charts/tp-cp-integration-common/charts/fileserver/templates/deployment.yaml
@@ -55,6 +55,9 @@ spec:
               mountPath: /tmp
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          readinessProbe:
+            tcpSocket:
+              port: {{ .Values.service.port }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
