--- a/charts/tp-cp-o11y/charts/o11y-service/templates/deployment.yaml
+++ b/charts/tp-cp-o11y/charts/o11y-service/templates/deployment.yaml
@@ -52,6 +52,9 @@ spec:
           ports:
             - containerPort: 7820
               name: tp-o11yservice
+          readinessProbe:
+            tcpSocket:
+              port: 7820
           env:
             - name: WHO
               value: {{include "o11y-service.cp-instance-id" .}}
