--- a/charts/flogoprovisioner/values.yaml
+++ b/charts/flogoprovisioner/values.yaml
@@ -156,7 +156,13 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+resources:
+  requests:
+    cpu: 500m
+    memory: 700Mi
+  limits:
+    cpu: "1"
+    memory: 1024Mi
 
 autoscaling:
   enabled: false
