--- a/charts/tp-cp-core/charts/identity-management/values.yaml
+++ b/charts/tp-cp-core/charts/identity-management/values.yaml
@@ -81,6 +81,14 @@ fluentbit:
     limits:
       cpu: "150m"
       memory: "150Mi"
+init:
+  resources:
+    requests:
+      cpu: "100m"
+      memory: "100Mi"
+    limits:
+      cpu: "150m"
+      memory: "150Mi"
 
 hpa:
   cpu: 70
