--- a/charts/tp-cp-core/charts/identity-provider/templates/cp-identity-provider.yaml
+++ b/charts/tp-cp-core/charts/identity-provider/templates/cp-identity-provider.yaml
@@ -72,6 +72,13 @@ spec:
           securityContext:
             {{- toYaml .Values.global.containerSecurityContext.tpcpidpservice | nindent 12 }}
           {{- end }}
+          resources:
+            requests:
+              cpu: {{ .Values.init.resources.requests.cpu }}
+              memory: {{ .Values.init.resources.requests.memory }}
+            limits:
+              cpu: {{ .Values.init.resources.limits.cpu }}
+              memory: {{ .Values.init.resources.limits.memory }}
           command: [ 'sh', '-c', 'until [[ "$wget_result" == *"200"* ]]; do echo waiting for identity-management to be running; sleep 1; wget_result=$(wget --spider -S "http://$TP_CP_IDM_HOST:9831/v1/monitor/ping" 2>&1 | grep "HTTP/"); done' ]
           env:
             - name: TP_CP_IDM_HOST
