--- a/charts/tp-cp-core/charts/web-server/values.yaml
+++ b/charts/tp-cp-core/charts/web-server/values.yaml
@@ -83,6 +83,15 @@ fluentbit:
     limits:
       cpu: 150m
       memory: 150Mi
+init:
+  resources:
+    requests:
+      cpu: 100m
+      memory: 100Mi
+    limits:
+      cpu: 150m
+      memory: 150Mi
+
 
 # HPA
 hpa:
