--- a/charts/tp-cp-core/templates/jobs.yaml
+++ b/charts/tp-cp-core/templates/jobs.yaml
@@ -538,6 +538,13 @@ spec:
         {{- end }}
         image: {{ include "cp-core-configuration.container-registry" .}}{{"/"}}{{ include "cp-core-configuration.image-repository" . }}{{"/"}}{{ .Values.global.tibco.image_name.cpScripts }}:{{ include "tp-cp-core-job.generated.buildNumber" . }}
         imagePullPolicy: IfNotPresent
+        resources:
+          requests:
+            cpu: {{ .Values.global.resources.tpcpcoreJob.requests.cpu }}
+            memory: {{ .Values.global.resources.tpcpcoreJob.requests.memory }}
+          limits:
+            cpu: {{ .Values.global.resources.tpcpcoreJob.limits.cpu }}
+            memory: {{ .Values.global.resources.tpcpcoreJob.limits.memory }}
         env:
         - name: POD_NAMESPACE
           valueFrom:
@@ -602,6 +609,13 @@ spec:
         {{- end }}
         image: {{ include "cp-core-configuration.container-registry" .}}{{"/"}}{{ include "cp-core-configuration.image-repository" . }}{{"/"}}{{ .Values.global.tibco.image_name.cpScripts }}:{{ include "tp-cp-core-job.generated.buildNumber" . }}
         imagePullPolicy: IfNotPresent
+        resources:
+          requests:
+            cpu: {{ .Values.global.resources.tpcpcoreJob.requests.cpu }}
+            memory: {{ .Values.global.resources.tpcpcoreJob.requests.memory }}
+          limits:
+            cpu: {{ .Values.global.resources.tpcpcoreJob.limits.cpu }}
+            memory: {{ .Values.global.resources.tpcpcoreJob.limits.memory }}
         env:
         - name: TSC_CONFIG_LOCATION
           value: /opt/tibco/tsc/config
