--- a/charts/dp-bw-adapter/templates/ingress_public_nginx.yaml
+++ b/charts/dp-bw-adapter/templates/ingress_public_nginx.yaml
@@ -25,5 +25,5 @@ spec:
             port:
               number: {{ $.Values.service.targetPort }}
         path: {{ .Values.global.cp.resources.ingress.pathPrefix }}/(.*)
-        pathType: Prefix
+        pathType: ImplementationSpecific
 {{- end }}
