--- a/charts/flogoprovisioner/templates/ingress_public_nginx.yaml
+++ b/charts/flogoprovisioner/templates/ingress_public_nginx.yaml
@@ -37,5 +37,5 @@ spec:
             port:
               number: {{ $.Values.publicApiService.targetPort }}
         path: {{ .Values.publicApi.ingress.config.pathPrefix }}/(.*)
-        pathType: Prefix
+        pathType: ImplementationSpecific
 {{- end }}
