--- a/charts/tp-cp-bwce-recipes/templates/bw-adapter.yaml
+++ b/charts/tp-cp-bwce-recipes/templates/bw-adapter.yaml
@@ -49,7 +49,7 @@ data:
       helmCharts:
         - name: dp-bw-adapter
           namespace: ${NAMESPACE}
-          version: "1.3.10"
+          version: "1.3.*"
           repository:
             chartMuseum:
               host: ${HELM_REPO}
