--- a/charts/tp-cp-hawk-console-recipes/values.yaml
+++ b/charts/tp-cp-hawk-console-recipes/values.yaml
@@ -9,7 +9,7 @@ capabilities:
     # set to true for latest version of recipe
     isLatest: "true"
     # Helm chart version for hawk-console, default is latest
-    version: "1.3.0"
+    version: "1.3.*"
     tag: "17"
     # Timestamp of capability release
     releaseDate: "2024/02/22"
