--- a/charts/oauth2-proxy-recipes/values.yaml
+++ b/charts/oauth2-proxy-recipes/values.yaml
@@ -9,7 +9,7 @@ capabilities:
     # set to true for latest version of recipe
     isLatest: "true"
     # Helm chart version for cp proxy, default is latest
-    version: "10.1.022"
+    version: "10.1.*"
     tag: "v1.3.4"
     # Timestamp of capability release
     releaseDate: "2024/08/02"
